--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <section id="projects">
         <h1>These are some of my projects</h1>
         <div class="projects">
-              <a href="" class="project-tile">
+              <a href="https://pushkarlabh1.github.io/My-portfolio-website/" class="project-tile">
                 <img src="https://i.ibb.co/7CbY7qw/store.png" alt="">
               <p><span>&lt;</span>PRODUCT LANDING PAGE<span>/&gt;</span></p>
           </a>
